--- a/pages/downloads.html
+++ b/pages/downloads.html
@@ -153,6 +153,18 @@ a:link,a:visited{text-decoration:none;color:#045b7e;}
  				<td align="left" width="325px">Life members list(Last updated on 23-01-2012)</td><td class="tbl" width="242px" align="left">lifememberslist.pdf(0.168 MB) </td><td><a href="../files/lifememberslist.pdf"><span><img src="../images/downloadicon.png" />Download</span></a></td>
  			</tr>
  		</table>
+
+			<table border="0px" width="80%" style="font-size:130%;" >
+ 			<tr >
+					<td align="left">Application Form</td>
+ 			</tr>
+		</table>
+  		<table border="0px" width="70%" cellspacing="10px">
+
+ 			<tr>
+ 				<td align="left" width="325px">Application Form(Last updated on 26-01-2018)</td><td class="tbl" width="242px" align="left">application_form.pdf(0.14 MB) </td><td><a href="../files/application_form.pdf"><span><img src="../images/downloadicon.png" />Download</span></a></td>
+ 			</tr>
+ 		</table>
  		<!-- PROTOTYPE
  		<table border="0px" width="80%" style="font-size:130%;">
  			<tr >
