Changing President's Name

--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -122,12 +122,26 @@ The Njavallil family mainly consists of nine branches:
     </div>
  	-->
  	 <table width="80%" border="0"  >
+              <tr align="center" valign="middle">
+              	 <td>
+
+                 <a style="color:#045b7e;" href="https://photos.app.goo.gl/zhABJnZEniDjymdK2" target="_blank" role="button"   data-toggle="modal"><div   style ="padding:20px;"> <!--<span style="padding-left:220px; color:#F00; text-decoration:blink;">New!</span>-->
+                 <div class="shad" id="album1" class ="album"  style ="width:175px;height:130px;overflow:hidden;position:relative;cursor:pointer;border-style:solid;border-radius:0px;">
+                 <img style="padding-top:0px;" src="https://lh3.googleusercontent.com/HRLPhJ546FtDBwsSboW4iirkTB71SnCir4E2Jlwi1E9DYIYne9nZvNETM9ZStfEPdnAiEyCCl70zjQ9k6Y76oh87Kwt4jm7OSVARwbGnijR-QAdunQJl5-j5H4ZcChcs6C28ON0JhEp7ba-nP-GzYWuG-N9ow7ya1SE6a-nh4eeQQ0FovvV3iBn4lk5ZOxGF8PdxotwDtkULsvNWACHXY_don9dAVh-ACl6pIkzAiI0dIdM1btut1zUKf3UQw6PfB_NAWCVf1qxV6aqpmYXio9g61ARtBWcl_K8j6pMEjMchDopC2pWKAgQRSvT_DsZLr83RyziXnLz8roYB21b7rVUptONmRU7rA3eQAqHhxg61iaSlct4GZ_7XCGZMK5C9TBL2k5DpJURv0-5-l5Yk6_ItCzeEvYfdhK2rGABNNBb4gJLQzjAoi0rgJkeUrfkLK48O08I3ppxhfnb9nQp09Gz81vDCi3P5kpGvPwfsD6MfE709r3t9gJICqlzapjWXSdiylZC_MSi0UaCAS0Sw1jtfFWv-g2eEcBFWVVSHAOYx6XnO60HTK-3_pUJnm8UabD0HrSTJ9OjIOZjKxxeDNYJqVuGxvRbcWR0CZsz7vOuyWGb4uhHKSnMXY2tJfw-Jg26gGdEaYYnJLSsUWK7b13AwWJziGr-O=s151-p-k-no" />
+                 </div>
+                 <span class="piclink">Kudumbayogam 2018</span>
+                 </div>
+                 </a>
+
+                 </td>
+			  </tr>
+
                 <tr align="center" valign="middle">
               	 <td>
                  
                  <a style="color:#045b7e;" href="https://goo.gl/photos/6MFAqhhQHUP4ZLU28" target="_blank" role="button"   data-toggle="modal"><div   style ="padding:20px;"> <!--<span style="padding-left:220px; color:#F00; text-decoration:blink;">New!</span>-->
                  <div class="shad" id="album1" class ="album"  style ="width:175px;height:130px;overflow:hidden;position:relative;cursor:pointer;border-style:solid;border-radius:0px;">
-                 <img style="padding-top:6px;" src="https://lh3.googleusercontent.com/6b7j2SghiYgnJI25cZ_f0KcLXZelHVzHZ-omwkBpLyvZtDa3_Dz9yh3c1dj8SMaSlgivdP206mJEpy1-lx-UohqnEFJF9GZgJ6lv3ex9zBXS6JBGn91uqYvUvjanvdTvSuQMeJkC-_NaC4A5Wffa1F04IkKvXo37uDMgqAOYlK0cTmzbAf3252NeE89Jm85f8psp47Su-TvzZFSbqPy7HfFHo8lJoKMzQXUfpMaa4tlBV37cdjwNyEsb6lUIJTvDPnAI-HDIxfO07hePIFGqBvXELTgvRQbfya6JanOmkdqB8Y-pzL6gQgv_NmjSsGKrwoTHalm0epxXhYwn38UnMEHhAyY1SorvmsgHCOND6xQSgQ0fojLMxMiM8fdkkNgABnuCCQdZmiO8dNX0RjOtbWZJJKyGlzEndqkAEB-MmGcKPj4mzJiAVfjSRZwKR1Eum3rza19sh2eF11EmP_WnuF_P3ZF7W0Ql9b7ofpNt8v1-1ZiR-eAUoFZht7jXlW_WJcTj9BG-y7cTQL0T1DlXZicIxb5zkP4mKns8yp2nZJ6z2c0mPqG_cEgBEqekNnITdBDWC8t9wZdU6_886vbXPanaTlzKIf1rSNGcBZQ8fhXbNsYnMIeY_SUZcARTTRbncS0Cn7G9hMLfjoK5UB6-Q7aFlF9wydGGS20yGzXu=w444-h296-no" />
+                 <img style="padding-top:0px;" src="https://lh3.googleusercontent.com/pd3wYLEB8csJEYNvUX87S3mvCFRcIvVr7VT1r942Oobbo4nFOVJP00EsHEUw8elUlyyfbDg68LaIFtS2FNrB_AcP3lKHEqQZYkwmHYx1SLojCJ-qG-0pZRRc5WaqeDdE_C5eYV0Lq320fQLACDA7-kP4bfaKwpGvKxdIbVn_pvL9j5ZE49tuTy_akuDpRoo6wXiK302PlKwYHioQ0Ai1WecYcHkfvB6Ak4uQRuc_65agRyRa-RPRSCKfkyQXexGnuhR8PNKAKq1_aYj423s-XYsOaj_lch74aKt-QNJzk44r0tq6bJyA64oeaNpe60BBxdCzEKwY3GRKosnMaIUorG6OVmmqOwZki2LYGr-v2G8EiEq_w888BA0MuKzGEvR0BbOT5-4LwirLpKAzXm0FBeP7wbmW-y0Sbj2chFnz9Us2iuiM5EE3yY9w0gbRaGLCFR4yeO2XLQBwvDzNHrt3PhiOTk0yuLCWL-FrrQYj6R5Ngu5fHnOJnUBsoDkEUsMaYGRhZfOmDfjNC7P-M1fGj1ZZkmaCrFXBsTfs8DYxzi2GCcRf_WKJNvom1LR-9mxauNnw0klDWDc319R7kLLwbOY0EA-CeT80mR-yNao=s151-p-k-no" />
                  </div>
                  <span class="piclink">Kudumbayogam 2017</span>
                  </div>
