--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -122,7 +122,19 @@ The Njavallil family mainly consists of nine branches:
     </div>
  	-->
  	 <table width="80%" border="0"  >
+
               <tr align="center" valign="middle">
+                  <td>
+
+                 <a style="color:#045b7e;" href="https://photos.app.goo.gl/UTUUw7Qoz8C7AvH5A" target="_blank" role="button"   data-toggle="modal"><div   style ="padding:20px;"> <!--<span style="padding-left:220px; color:#F00; text-decoration:blink;">New!</span>-->
+                 <div class="shad" id="album1" class ="album"  style ="width:175px;height:130px;overflow:hidden;position:relative;cursor:pointer;border-style:solid;border-radius:0px;">
+                 <img style="padding-top:0px;" src="https://lh3.googleusercontent.com/Kavze4SX2MLGLPaAUN0oIFw-4gs3EZj_8ocIXgz2M722U8pbRlPc_hMxBoo0xYAH9wZb9suqQ5Yij4pj7fYedrsW14euI4cyB9SJWnKO7m5ErxhCceAQU5SdKfecMM3dFnm2JJljitG2XIyMxyas_NB9ZDxsfXYp8HOhNqHY2MP7fxm7cw3lg_se7R5AFHzkq6xc540cLFCajtExgBOwpXQ3VWxJXOyCmmgydpU-OluOfaPyrk1xmSbA5JUJ05aXUBeEKjaYRwB_NL_9YfAB9oAZtKErL1YNJziSLIndv_56_vHG6Z8d3eM6J9B2b0zvL2jTsU2k35_WahKnm1cXQJji-LN4vYSTq_cevb-hWUgp02am18FY4jzyi7hWcLhK4YgDtSNYGRh0du99TrPfeqlDooIeNw898u2gdqTapJtvy6nBW-gfuB23DXdhMc0IfvTV6JdneoMY0lPDK6u59ZjXxDSAdDuf7m8p1qxupvFC-k9bmXGl9RiiRmK6lnwu0jahMlQTEx-gD3Qo313zd_zMOKxwtd84D4xsChQOsZ-n-MYrTsoqOFMHRUK2wt7ZVvprB3x77lACqvwKdLzUasGLPdEzPaKvSsl4fTer4CdUlwR1M8TFvTs45yiHCIH5JrfMaIvCRncc1uwhQeXDuU_aUATdhNI=s198-p-k-no" />
+                 </div>
+                 <span class="piclink">Kudumbayogam 2019</span>
+                 </div>
+                 </a>
+
+                 </td>
               	 <td>
 
                  <a style="color:#045b7e;" href="https://photos.app.goo.gl/zhABJnZEniDjymdK2" target="_blank" role="button"   data-toggle="modal"><div   style ="padding:20px;"> <!--<span style="padding-left:220px; color:#F00; text-decoration:blink;">New!</span>-->
